--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -84,7 +84,8 @@
 <!ENTITY Ctr_appbutton2h	"Tlačítko v záhlaví okna [&brandShortName;] (hidden)">
 <!ENTITY Ctr_appbutton2io	"Tlačítko v záhlaví okna [&brandShortName;] (pouze ikona)">
 <!ENTITY Ctr_paneluibtweak	"Oranžový panel jako tlačítko...">
-<!ENTITY Ctr_paneluibtweak2	"...na liště s panely">
+<!ENTITY Ctr_paneluibtweak2	"Oranžový panel jako tlačítko (pouze ikona)...">
+<!ENTITY Ctr_paneluibtweak3	"...na liště s panely">
 <!ENTITY Ctr_appbuttonc_o	"Oranžové tlačítko (výchozí)">
 <!ENTITY Ctr_appbuttonc_a	"Modré tlačítko (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Černé tlačítko (Nightly)">
