--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -84,7 +84,8 @@
 <!ENTITY Ctr_appbutton2h	"Knap på [&brandShortName;] titellinje (skjul)">
 <!ENTITY Ctr_appbutton2io	"Knap på [&brandShortName;] titellinje (kun ikon)">
 <!ENTITY Ctr_paneluibtweak	"Vis menuknap som &brandShortName;-knap...">
-<!ENTITY Ctr_paneluibtweak2	"...når på fanebladslinje">
+<!ENTITY Ctr_paneluibtweak2	"Vis menuknap som &brandShortName;-knap (kun ikon)...">
+<!ENTITY Ctr_paneluibtweak3	"...når på fanebladslinje">
 <!ENTITY Ctr_appbuttonc_o	"Orange knap (standard)">
 <!ENTITY Ctr_appbuttonc_a	"Blå knap (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Sort knap (Nightly)">
