--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -84,7 +84,8 @@
 <!ENTITY Ctr_appbutton2h	"Auf der &brandShortName; Titelleiste (versteckt)">
 <!ENTITY Ctr_appbutton2io	"Auf der &brandShortName; Titelleiste (nur Symbol)">
 <!ENTITY Ctr_paneluibtweak	"Zeige Menüschaltfläche als &brandShortName;-Schaltfläche...">
-<!ENTITY Ctr_paneluibtweak2	"...auf der Tableiste">
+<!ENTITY Ctr_paneluibtweak2	"Zeige Menüschaltfläche als &brandShortName;-Schaltfläche (nur Symbol)...">
+<!ENTITY Ctr_paneluibtweak3	"...auf der Tableiste">
 <!ENTITY Ctr_appbuttonc_o	"Orange Schaltflächenfarbe (Standard)">
 <!ENTITY Ctr_appbuttonc_a	"Blaue Schaltflächenfarbe (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Schwarze Schaltflächenfarbe (Nightly)">
