--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -84,7 +84,8 @@
 <!ENTITY Ctr_appbutton2h	"Button on [&brandShortName;] titlebar (hidden)">
 <!ENTITY Ctr_appbutton2io	"Button on [&brandShortName;] titlebar (icon only)">
 <!ENTITY Ctr_paneluibtweak	"Display menu button as &brandShortName; button...">
-<!ENTITY Ctr_paneluibtweak2	"...when on tabs toolbar">
+<!ENTITY Ctr_paneluibtweak2	"Display menu button as &brandShortName; button (icon only)...">
+<!ENTITY Ctr_paneluibtweak3	"...when on tabs toolbar">
 <!ENTITY Ctr_appbuttonc_o	"Orange button color (default)">
 <!ENTITY Ctr_appbuttonc_a	"Blue button color (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Black button color (Nightly)">
