--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -84,7 +84,8 @@
 <!ENTITY Ctr_appbutton2h	"Nupp [&brandShortName;]i tiitliribal (peidetud)">
 <!ENTITY Ctr_appbutton2io	"Nupp [&brandShortName;]i tiitliribal (ainult ikoon)">
 <!ENTITY Ctr_paneluibtweak	"Kasuta menüünupu jaoks &brandShortName;i nupu välimust...">
-<!ENTITY Ctr_paneluibtweak2	"...kui see asub kaartide ribal">
+<!ENTITY Ctr_paneluibtweak2	"Kasuta menüünupu jaoks &brandShortName;i nupu välimust (ainult ikoon)...">
+<!ENTITY Ctr_paneluibtweak3	"...kui see asub kaartide ribal">
 <!ENTITY Ctr_appbuttonc_o	"Oranži värvi nupp (vaikimisi)">
 <!ENTITY Ctr_appbuttonc_a	"Sinist värvi nupp (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Musta värvi nupp (Nightly)">
