--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -84,7 +84,8 @@
 <!ENTITY Ctr_appbutton2h	"Bouton sur la barre de titre [&brandShortName;] (caché)">
 <!ENTITY Ctr_appbutton2io	"Bouton sur la barre de titre [&brandShortName;] (icône seule)">
 <!ENTITY Ctr_paneluibtweak	"Bouton orange sur la barre d'onglets">
-<!ENTITY Ctr_paneluibtweak2	" ">
+<!ENTITY Ctr_paneluibtweak2	"Bouton orange sur la barre d'onglets (icône seule)">
+<!ENTITY Ctr_paneluibtweak3	" ">
 <!ENTITY Ctr_appbuttonc_o	"Bouton orange (par défaut)">
 <!ENTITY Ctr_appbuttonc_a	"Bouton bleu (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Bouton noir (Nightly)">
@@ -160,8 +161,8 @@
 <!ENTITY Ctr_ctroldsearch	"Ancienne barre de recherche">
 <!ENTITY Ctr_ctroldsearchc	"Effacer boîte de recherche après une recherche">
 <!ENTITY Ctr_search_oit		"Ouvrir la recherche dans un nouvel onglet (préférence about:config)">
-<!ENTITY Ctr_osearch_meoit	"Clic central : recherche dans un nouvel “onglet au premier plan”">
-<!ENTITY Ctr_osearch_dm		"Petite “dropmarker”">
+<!ENTITY Ctr_osearch_meoit	"Clic central : recherche dans un nouvel « onglet au premier plan »">
+<!ENTITY Ctr_osearch_dm		"Petite « dropmarker »">
 <!ENTITY Ctr_addonmanager	"Gestionnaire de modules complémentaires">
 <!ENTITY Ctr_alt_addonsp	"Page « Plus d'infos » des modules : apparence alternative">
 <!ENTITY Ctr_alt_addonsm	"Appearance alternative">
@@ -225,7 +226,7 @@
 <!ENTITY Ctr_starinurlinfo	"Par défaut le bouton de menu des marque-pages est masqué">
 <!ENTITY Ctr_feedinurl		"Bouton d'abonnement">
 <!ENTITY Ctr_hideurelstop	"Masquer « stop-actualiser »">
-<!ENTITY Ctr_hideurelstop2	"Toujours afficher le bouton « aller à »"">
+<!ENTITY Ctr_hideurelstop2	"Toujours afficher le bouton « aller à »">
 <!ENTITY Ctr_hideurlgo		"Masquer le bouton « aller à »">
 <!ENTITY Ctr_hideurlsrg		"Cacher les séparateurs de boutons « actualiser, stop &amp; aller à » &amp; espaces">
 <!ENTITY Ctr_urlbardropm	"Move dropmarker to the last possible position">
