--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -84,7 +84,8 @@
 <!ENTITY Ctr_appbutton2h	"Gumb na nazivni vrstici [&brandShortName;a] (skrit)">
 <!ENTITY Ctr_appbutton2io	"Gumb na nazivni vrstici [&brandShortName;a] (samo ikona)">
 <!ENTITY Ctr_paneluibtweak	"Oranžni gumb ploščastega menija …">
-<!ENTITY Ctr_paneluibtweak2	"… na orodni vrstici zavihkov">
+<!ENTITY Ctr_paneluibtweak2	"Oranžni gumb ploščastega menija (samo ikona) …">
+<!ENTITY Ctr_paneluibtweak3	"… na orodni vrstici zavihkov">
 <!ENTITY Ctr_appbuttonc_o	"Oranžna barva gumba (privzeto)">
 <!ENTITY Ctr_appbuttonc_a	"Modra barva gumba (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Črna barva gumba (Nightly)">
