--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -84,7 +84,8 @@
 <!ENTITY Ctr_appbutton2h	"Araç çubuğunda [&brandShortName;] butonu(saklı)">
 <!ENTITY Ctr_appbutton2io	"[&brandShortName;] başlığında buton (sadece ikon)">
 <!ENTITY Ctr_paneluibtweak	"Sekme çubuğunda turuncu panel...">
-<!ENTITY Ctr_paneluibtweak2	"...menü butonu">
+<!ENTITY Ctr_paneluibtweak2	"Sekme çubuğunda turuncu panel (sadece ikon)...">
+<!ENTITY Ctr_paneluibtweak3	"...menü butonu">
 <!ENTITY Ctr_appbuttonc_o	"Turuncu renk butonu">
 <!ENTITY Ctr_appbuttonc_a	"Mavi renk butonu (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Siyah renk butonu (Nightly)">
