--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -84,7 +84,8 @@
 <!ENTITY Ctr_appbutton2h	"Botón en la barra de título [de &brandShortName;] (oculto)">
 <!ENTITY Ctr_appbutton2io	"Botón en la barra de título [de &brandShortName;] (sólo icono)">
 <!ENTITY Ctr_paneluibtweak	"Botón de menú de panel principal en la barra de pestañas,...">
-<!ENTITY Ctr_paneluibtweak2	"...con estilo botón de la aplicación">
+<!ENTITY Ctr_paneluibtweak2	"Botón de menú de panel principal en la barra de pestañas (sólo icono),...">
+<!ENTITY Ctr_paneluibtweak3	"...con estilo botón de la aplicación">
 <!ENTITY Ctr_appbuttonc_o	"Color de botón naranja (predeterminado)">
 <!ENTITY Ctr_appbuttonc_a	"Color de botón azul (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Color de botón negro (Nightly)">
