--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -84,7 +84,8 @@
 <!ENTITY Ctr_appbutton2h	"顯示在標題列 (隱藏)">
 <!ENTITY Ctr_appbutton2io	"顯示在標題列 (僅圖示)">
 <!ENTITY Ctr_paneluibtweak	"橘色面板選單按鈕顯示在分頁列">
-<!ENTITY Ctr_paneluibtweak2	" ">
+<!ENTITY Ctr_paneluibtweak2	"橘色面板選單按鈕顯示在分頁列 (僅圖示)">
+<!ENTITY Ctr_paneluibtweak3	" ">
 <!ENTITY Ctr_appbuttonc_o	"橙色按鈕 (預設值)">
 <!ENTITY Ctr_appbuttonc_a	"藍色按鈕 (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"黑色按鈕 (Nightly)">
